Signup Message + clear form

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-confetti": "^0.1.0",
+    "react-native-flash-message": "^0.1.13",
+    "react-native-really-awesome-button": "^1.4.2",
     "react-native-swipeout": "^2.3.6",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
